# markdown-it-plugins.rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
crates/autolink/: Cargo.toml  README.md
crates/autolink/src/: lib.rs
crates/autolink/tests/: fixtures.rs
crates/autolink/tests/fixtures/: _spec-632.md  cmark_integration.md  spec-622.md  spec-623.md  spec-624.md  spec-625.md  spec-626.md  spec-627.md  spec-628.md  spec-629.md  spec-630.md  spec-631.md  spec-632-mod.md  spec-633.md  spec-634.md  spec-635.md  trailing_delimiters.md
crates/deflist/: Cargo.toml  README.md
crates/deflist/src/: lib.rs
crates/deflist/tests/: fixtures.rs
crates/deflist/tests/fixtures/: example1.md  example2.md  example3.md  extra1.md  extra10.md  extra11.md  extra2.md  extra3.md  extra4.md  extra5.md  extra6.md  extra7.md  extra8.md  extra9.md
crates/dev/: Cargo.toml
crates/dev/src/: lib.rs
crates/footnote/: Cargo.toml  README.md
crates/footnote/src/: back_refs.rs  collect.rs  definitions.rs  inline.rs  lib.rs  references.rs
crates/footnote/tests/: fixtures.rs
crates/footnote/tests/fixtures/: 0.md  1.md  10.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  _7.md  _inline-1.md  _inline-2.md  _inline-3.md  inline-1.md  inline-2.md  inline-3.md  inline-4.md
crates/front_matter/: Cargo.toml  README.md
crates/front_matter/tests/: fixtures.rs
crates/front_matter/tests/fixtures/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md
crates/gfm/: Cargo.toml  README.md
crates/gfm-autolinks/: Cargo.toml  README.md
crates/gfm-autolinks/src/: ctype.rs  email.rs  lib.rs  url.rs  utils.rs  www.rs
crates/gfm/src/: lib.rs
crates/gfm/tests/: fixtures.rs  gen_fixtures.py  spec.txt
crates/gfm/tests/fixtures/: _spec_343.md  _spec_363.md  _spec_493.md  _spec_516.md  _spec_617.md  _spec_632.md  spec_001.md  spec_002.md  spec_003.md  spec_004.md  spec_005.md  spec_006.md  spec_007.md  spec_008.md  spec_009.md  spec_010.md  spec_011.md  spec_012.md  spec_013.md  spec_014.md  spec_015.md  spec_016.md  spec_017.md  spec_018.md  spec_019.md  spec_020.md  spec_021.md  spec_022.md  spec_023.md  spec_024.md  spec_025.md  spec_026.md  spec_027.md  spec_028.md  spec_029.md  spec_030.md  spec_031.md  spec_032.md  spec_033.md  spec_034.md  (+642 more)
crates/github_slugger/: Cargo.toml  README.md
crates/github_slugger/src/: lib.rs
crates/github_slugger/tests/: fixtures.json  fixtures.rs
crates/heading_anchors/: Cargo.toml  README.md
crates/heading_anchors/src/: lib.rs
crates/heading_anchors/tests/: fixtures.rs
crates/heading_anchors/tests/fixtures/: 0.md  1.md  2.md  3.md
crates/tasklist/: Cargo.toml  README.md
crates/tasklist/src/: lib.rs
crates/tasklist/tests/: fixtures.rs
crates/tasklist/tests/fixtures/: 0.md  1.md  1b.md  2.md  3.md  4.md  5.md  6.md
src/: lib.rs
tests/: fixtures.md
