[workspace]
members = ["crates/*"]

# see https://doc.rust-lang.org/stable/cargo/reference/workspaces.html#the-dependencies-table

[workspace.package]
edition = "2021"
authors = ["Chris Sewell <chrisj_sewell@hotmail.com>"]
repository = "https://github.com/chrisjsewell/markdown-it-front-matter.rs"
keywords = ["markdown", "markdown-it"]
categories = ["text-processing", "parsing"]

[workspace.dependencies]
markdown-it = "0.5"
indoc = "2.0.1"
rstest = "0.17.0"
