[workspace]
members = ["crates/*"]

# see https://doc.rust-lang.org/stable/cargo/reference/workspaces.html#the-dependencies-table

[workspace.package]
edition = "2021"
authors = ["Chris Sewell <chrisj_sewell@hotmail.com>"]
repository = "https://github.com/chrisjsewell/markdown-it-plugins.rs"
keywords = ["markdown", "markdown-it"]
categories = ["text-processing", "parsing"]

[workspace.dependencies]
markdown-it = "0.5"
testing = "0.33.13"
# possible other packages for testing that are not actually used currently
# indoc, rtest, insta


[workspace.metadata.release]
pre-release-commit-message = "🚀 Release"
tag-message = "🚀 Release {{crate_name}} version {{version}}"
allow-branch = ["main"]
