[workspace]
members = ["crates/*"]

# see https://doc.rust-lang.org/stable/cargo/reference/workspaces.html#the-dependencies-table

[workspace.package]
edition = "2021"
authors = ["Chris Sewell <chrisj_sewell@hotmail.com>"]
repository = "https://github.com/chrisjsewell/markdown-it-plugins.rs"
keywords = ["markdown", "markdown-it"]
categories = ["text-processing", "parsing"]

[workspace.dependencies]
markdown-it =  { version = "0.6", default-features = false }
regex       = ">= 1.0.0, < 2"
once_cell   = ">= 1.0.1, < 2"
testing     = "0.33"
rstest      = "0.18"
# possible other packages for testing that are not actually used currently
# indoc, rtest, insta


[workspace.metadata.release]
pre-release-commit-message = "🚀 Release"
tag-message = "🚀 Release {{crate_name}} version {{version}}"
allow-branch = ["main"]
