[package]
name = "markdown-it-autolink"
version = "0.0.0"
description = "A markdown-it plugin for parsing GFM autolinks"
readme = "README.md"
license = "Apache-2.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-it = { workspace = true }
gfm-autolinks = { path = "../gfm-autolinks", version = "0.1" }

[dev-dependencies]
dev = { path = "../dev" }
testing = { workspace = true }
