[package]
name = "markdown-it-front-matter"
version = "0.1.0"
description = "A markdown-it plugin for parsing front matter"
readme = "README.md"
license = "Apache-2.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-it = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
rstest = { workspace = true }
