[package]
name = "gfm-autolinks"
version = "0.1.0"
description = "Parse GitHub Flavored Markdown autolinks"
readme = "README.md"
license = "Apache-2.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
unicode_categories = "0.1"

[dev-dependencies]
rstest = { workspace = true }
