[package]
name = "markdown-it-heading-anchors"
version = "0.3.0"
description = "A markdown-it plugin for parsing GFM tasklists"
readme = "README.md"
license = "Apache-2.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-it = { workspace = true }
github-slugger = { path = "../github_slugger", version = "0.1.0" }

[dev-dependencies]
dev = { path = "../dev" }
testing = { workspace = true }
