[package]
name = "markdown-it-tasklist"
version = "0.2.0"
description = "A markdown-it plugin for parsing GFM tasklists"
readme = "README.md"
license = "Apache-2.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-it = { workspace = true }
regex       = { workspace = true }
once_cell   = { workspace = true }
stacker     = ">= 0.1.2, < 0.2"

[dev-dependencies]
dev = { path = "../dev" }
testing = { workspace = true }
